--- a/11-projeto-api/package.json
+++ b/11-projeto-api/package.json
@@ -2,15 +2,14 @@
   "name": "11-projeto-api",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
     "start:dev": "tsx --env-file=.env src/server.ts",
-    "start:watch": "tsx --env-file=.env watch src/server.ts",
+    "start:watch": "tsx watch --env-file=.env src/server.ts",
     "dist": "tsup src",
-    "start:dist": "npm run dist && --env-file=.env node/server.js"
+    "start:dist": "npm run dist && --env-file=.env src/server.js"
   },
   "keywords": [],
   "author": "",
